--- a/app-admin/eselect-wxwidgets/ChangeLog
+++ b/app-admin/eselect-wxwidgets/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-wxwidgets
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-wxwidgets/ChangeLog,v 1.40 2009/10/04 18:58:13 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-wxwidgets/ChangeLog,v 1.41 2009/10/18 17:52:53 nixnut Exp $
+
+  18 Oct 2009; nixnut <nixnut@gentoo.org> eselect-wxwidgets-1.1.ebuild:
+  ppc stable #287362
 
   04 Oct 2009; Raúl Porcel <armin76@gentoo.org>
   eselect-wxwidgets-1.1.ebuild:
