--- a/app-crypt/xca/ChangeLog
+++ b/app-crypt/xca/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/xca
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/xca/ChangeLog,v 1.19 2009/10/03 20:11:18 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/xca/ChangeLog,v 1.20 2009/10/18 17:54:26 ssuominen Exp $
+
+  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> xca-0.7.0.ebuild,
+  +files/xca-0.7.0-gcc44.patch:
+  Fix building with GCC 4.4+ wrt #289608.
 
 *xca-0.7.0 (03 Oct 2009)
 
