--- a/kde-base/ktimetracker/ChangeLog
+++ b/kde-base/ktimetracker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ktimetracker
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimetracker/ChangeLog,v 1.26 2009/10/10 10:16:28 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimetracker/ChangeLog,v 1.27 2009/10/18 17:30:58 maekke Exp $
+
+  18 Oct 2009; Markus Meier <maekke@gentoo.org> ktimetracker-4.3.1.ebuild:
+  x86 stable, bug #287697
 
   10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   ktimetracker-4.3.1.ebuild:
