--- a/kde-base/soliduiserver/ChangeLog
+++ b/kde-base/soliduiserver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/soliduiserver
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/soliduiserver/Attic/ChangeLog,v 1.36 2009/10/10 10:47:43 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/soliduiserver/Attic/ChangeLog,v 1.37 2009/10/18 17:40:43 maekke Exp $
+
+  18 Oct 2009; Markus Meier <maekke@gentoo.org> soliduiserver-4.3.1.ebuild:
+  x86 stable, bug #287697
 
   10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   soliduiserver-4.3.1.ebuild:
