--- a/media-libs/schroedinger/ChangeLog
+++ b/media-libs/schroedinger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/schroedinger
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/schroedinger/ChangeLog,v 1.36 2009/10/14 04:47:48 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/schroedinger/ChangeLog,v 1.37 2009/10/18 19:04:03 armin76 Exp $
+
+  18 Oct 2009; Raúl Porcel <armin76@gentoo.org> schroedinger-1.0.7.ebuild:
+  arm/ia64/sparc stable
 
 *schroedinger-1.0.8 (14 Oct 2009)
 
