--- a/www-client/mozilla-firefox-bin/ChangeLog
+++ b/www-client/mozilla-firefox-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/mozilla-firefox-bin/Attic/ChangeLog,v 1.207 2009/09/11 20:36:51 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/mozilla-firefox-bin/Attic/ChangeLog,v 1.208 2009/10/19 11:08:30 ssuominen Exp $
+
+  19 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  mozilla-firefox-bin-3.5.2.ebuild:
+  amd64 stable wrt #280234
 
   11 Sep 2009; Markus Meier <maekke@gentoo.org>
   mozilla-firefox-bin-3.0.14.ebuild:
