--- a/x11-apps/xsetroot/ChangeLog
+++ b/x11-apps/xsetroot/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xsetroot
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xsetroot/ChangeLog,v 1.28 2009/05/20 13:35:55 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xsetroot/ChangeLog,v 1.29 2009/10/19 18:23:48 scarabeus Exp $
+
+*xsetroot-1.0.3 (19 Oct 2009)
+
+  19 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xsetroot-1.0.3.ebuild:
+  Version bump.
 
   20 May 2009; Brent Baude <ranger@gentoo.org> xsetroot-1.0.2.ebuild:
   Marking xsetroot-1.0.2 ppc stable for bug 268581
