--- a/x11-base/xorg-server/ChangeLog
+++ b/x11-base/xorg-server/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.455 2009/10/14 12:22:54 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.456 2009/10/19 18:42:35 scarabeus Exp $
+
+*xorg-server-1.7.0.902 (19 Oct 2009)
+
+  19 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  -xorg-server-1.7.0.901.ebuild, +xorg-server-1.7.0.902.ebuild:
+  Bump. Remove old one.
 
 *xorg-server-1.7.0.901 (14 Oct 2009)
 
