--- a/net-libs/libnice/ChangeLog
+++ b/net-libs/libnice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnice
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libnice/ChangeLog,v 1.8 2009/10/19 21:18:40 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libnice/ChangeLog,v 1.9 2009/10/19 21:41:05 maekke Exp $
+
+  19 Oct 2009; Markus Meier <maekke@gentoo.org> libnice-0.0.9.ebuild:
+  amd64 stable, bug #289298
 
   19 Oct 2009; Markus Meier <maekke@gentoo.org> libnice-0.0.9.ebuild:
   x86 stable, bug #289298
