--- a/gnome-base/libbonobo/ChangeLog
+++ b/gnome-base/libbonobo/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for gnome-base/libbonobo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.180 2009/10/11 21:31:34 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.181 2009/10/19 23:10:17 eva Exp $
 
 *libbonobo-2.24.2 (11 Oct 2009)
 
-  11 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org
+  11 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
   +libbonobo-2.24.2.ebuild:
   Version bump. Build fixes for automake-1.11, translation updates.
 
