--- a/net-wireless/gnome-bluetooth/ChangeLog
+++ b/net-wireless/gnome-bluetooth/ChangeLog
@@ -1,8 +1,8 @@
 # ChangeLog for net-wireless/gnome-bluetooth
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.60 2009/10/07 21:03:54 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.61 2009/10/19 23:13:04 eva Exp $
 
-  07 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org
+  07 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
   gnome-bluetooth-2.28.1.ebuild:
   Fix missing dependencies required by eautoreconf, bug #288066.
 
