--- a/app-office/taskcoach/ChangeLog
+++ b/app-office/taskcoach/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/taskcoach
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.33 2009/10/05 09:58:35 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.34 2009/10/20 11:36:41 caster Exp $
+
+*taskcoach-0.74.4 (20 Oct 2009)
+
+  20 Oct 2009; Vlastimil Babka <caster@gentoo.org> -taskcoach-0.74.2.ebuild,
+  +taskcoach-0.74.4.ebuild:
+  Version bump.
 
 *taskcoach-0.74.3 (05 Oct 2009)
 
