--- a/games-misc/fortune-mod-prolinux/ChangeLog
+++ b/games-misc/fortune-mod-prolinux/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-prolinux
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-misc/cvs-repo/gentoo-x86/games-misc/fortune-mod-prolinux/Attic/ChangeLog,v 1.2 2009/08/03 13:12:50 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-misc/cvs-repo/gentoo-x86/games-misc/fortune-mod-prolinux/Attic/ChangeLog,v 1.3 2009/10/20 13:03:11 maekke Exp $
+
+  20 Oct 2009; Markus Meier <maekke@gentoo.org>
+  fortune-mod-prolinux-0.25.ebuild:
+  x86 stable, bug #285398
 
   03 Aug 2009; Matthias Schwarzott <zzam@gentoo.org>
   fortune-mod-prolinux-0.25.ebuild:
