--- a/sys-cluster/vzctl/ChangeLog
+++ b/sys-cluster/vzctl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/vzctl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/vzctl/ChangeLog,v 1.64 2009/10/20 16:31:02 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/vzctl/ChangeLog,v 1.65 2009/10/21 11:53:42 pva Exp $
+
+  21 Oct 2009; Peter Volkov <pva@gentoo.org> vzctl-9999.ebuild:
+  Small clenup to restore DESCRIPTION, thank Mr_Bones_ for report.
 
 *vzctl-9999 (20 Oct 2009)
 
