--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.3430 2009/10/21 11:50:06 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.3431 2009/10/21 11:55:56 ssuominen Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  21 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> package.mask:
+  Mask kde-misc/tork wrt #210034.
 
   21 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> package.mask:
   Mask net-dialup/trayimonc wrt #276290.
