--- a/games-emulation/raine/ChangeLog
+++ b/games-emulation/raine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/raine
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/raine/ChangeLog,v 1.22 2009/07/29 04:05:16 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/raine/ChangeLog,v 1.23 2009/10/21 12:15:09 maekke Exp $
+
+  21 Oct 2009; Markus Meier <maekke@gentoo.org> raine-0.51.5.ebuild:
+  x86 stable, bug #285415
 
 *raine-0.51.5 (29 Jul 2009)
 
