--- a/kde-base/okular/ChangeLog
+++ b/kde-base/okular/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/okular
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/okular/ChangeLog,v 1.44 2009/10/18 17:44:43 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/okular/ChangeLog,v 1.45 2009/10/21 20:46:11 scarabeus Exp $
+
+  21 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> okular-4.3.1.ebuild,
+  okular-4.3.2.ebuild:
+  Fix missing lcms useflag require on poppler with pdf. Bug #284783.
 
   18 Oct 2009; Markus Meier <maekke@gentoo.org> okular-4.3.1.ebuild:
   x86 stable, bug #287697
