--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.525 2009/10/18 21:28:09 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.526 2009/10/22 13:12:39 aballier Exp $
+
+*vlc-1.0.3_rc (22 Oct 2009)
+
+  22 Oct 2009; Alexis Ballier <aballier@gentoo.org> +vlc-1.0.3_rc.ebuild:
+  bump to 1.0.3 rc
 
   18 Oct 2009; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
   we dont need an m4 tarball anymore for master
