--- a/media-sound/qmmp/ChangeLog
+++ b/media-sound/qmmp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/qmmp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qmmp/ChangeLog,v 1.21 2009/10/15 11:54:10 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qmmp/ChangeLog,v 1.22 2009/10/22 18:35:33 hwoarang Exp $
+
+  22 Oct 2009; Markos Chandras <hwoarang@gentoo.org> -qmmp-0.3.0.ebuild:
+  Remove old broken ebuild
 
   15 Oct 2009; Markus Meier <maekke@gentoo.org> qmmp-0.3.0-r1.ebuild:
   amd64/x86 stable, bug #288009
