--- a/sys-block/unieject/ChangeLog
+++ b/sys-block/unieject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/unieject
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.46 2009/06/27 13:26:10 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.47 2009/10/23 16:12:16 vostorga Exp $
+
+  23 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> unieject-5.3.2.ebuild:
+  Adding die to emake install
 
 *unieject-6 (27 Jun 2009)
 
