--- a/app-laptop/laptop-mode-tools/ChangeLog
+++ b/app-laptop/laptop-mode-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/laptop-mode-tools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/laptop-mode-tools/ChangeLog,v 1.45 2009/10/16 18:42:23 bangert Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/laptop-mode-tools/ChangeLog,v 1.46 2009/10/24 10:54:37 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> laptop-mode-tools-1.47-r1.ebuild:
+  ppc stable #284794
 
 *laptop-mode-tools-1.52 (16 Oct 2009)
 
