--- a/dev-db/ctdb/ChangeLog
+++ b/dev-db/ctdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/ctdb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/ctdb/ChangeLog,v 1.7 2009/10/09 22:49:10 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/ctdb/ChangeLog,v 1.8 2009/10/24 11:18:30 klausman Exp $
+
+  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org> ctdb-1.0.88.ebuild:
+  Keyworded on alpha, bug #285952
 
 *ctdb-1.0.88 (09 Oct 2009)
 
