--- a/media-video/clive/ChangeLog
+++ b/media-video/clive/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/clive
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/clive/ChangeLog,v 1.56 2009/09/25 17:16:18 volkmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/clive/ChangeLog,v 1.57 2009/10/24 11:57:47 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> clive-2.2.6.ebuild:
+  ppc stable #284544
 
   24 Sep 2009; Mounir Lamouri <volkmar@gentoo.org> clive-2.2.6.ebuild:
   Keywording for ppc. Fix bug 285496
