--- a/dev-util/geany/ChangeLog
+++ b/dev-util/geany/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/geany
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/geany/ChangeLog,v 1.29 2009/10/18 12:29:23 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/geany/ChangeLog,v 1.30 2009/10/24 13:46:33 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> geany-0.18.ebuild:
+  ppc stable #289084
 
   18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> geany-0.18.ebuild:
   amd64 stable wrt #289084
