--- a/www-plugins/gecko-mediaplayer/ChangeLog
+++ b/www-plugins/gecko-mediaplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-plugins/gecko-mediaplayer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.19 2009/10/19 11:34:29 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.20 2009/10/24 14:40:51 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> gecko-mediaplayer-0.9.8.ebuild:
+  ppc stable #289703
 
   19 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   gecko-mediaplayer-0.9.8.ebuild:
