--- a/app-i18n/enca/ChangeLog
+++ b/app-i18n/enca/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/enca
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/enca/ChangeLog,v 1.44 2009/10/24 13:24:36 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/enca/ChangeLog,v 1.45 2009/10/24 14:42:49 klausman Exp $
+
+  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org> enca-1.10.ebuild:
+  Stable on alpha, bug #288568
 
   24 Oct 2009; nixnut <nixnut@gentoo.org> enca-1.10.ebuild:
   ppc stable #288568
