--- a/sys-libs/libcap/ChangeLog
+++ b/sys-libs/libcap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libcap
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libcap/ChangeLog,v 1.97 2009/10/23 12:01:33 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libcap/ChangeLog,v 1.98 2009/10/24 14:59:35 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> libcap-2.17.ebuild:
+  ppc stable #290045
 
   23 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> libcap-2.17.ebuild:
   amd64 stable wrt #290045
