--- a/gnome-extra/gnome-user-docs/ChangeLog
+++ b/gnome-extra/gnome-user-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-user-docs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-user-docs/ChangeLog,v 1.24 2009/10/16 22:22:44 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-user-docs/ChangeLog,v 1.25 2009/10/24 16:36:18 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> gnome-user-docs-2.26.2.ebuild:
+  ppc stable #281427
 
   16 Oct 2009; Markus Meier <maekke@gentoo.org>
   gnome-user-docs-2.26.2.ebuild:
