--- a/app-text/evince/ChangeLog
+++ b/app-text/evince/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/evince
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/evince/ChangeLog,v 1.175 2009/10/16 23:27:31 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/evince/ChangeLog,v 1.176 2009/10/24 16:54:38 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> evince-2.26.2.ebuild:
+  ppc stable #281427
 
   16 Oct 2009; Markus Meier <maekke@gentoo.org> evince-2.26.2.ebuild:
   x86 stable, bug #281427
