--- a/gnome-extra/gnome-system-monitor/ChangeLog
+++ b/gnome-extra/gnome-system-monitor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-system-monitor
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-system-monitor/ChangeLog,v 1.196 2009/10/16 23:41:04 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-system-monitor/ChangeLog,v 1.197 2009/10/24 16:43:12 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org>
+  gnome-system-monitor-2.26.2.ebuild:
+  ppc stable #281427
 
   16 Oct 2009; Markus Meier <maekke@gentoo.org>
   gnome-system-monitor-2.26.2.ebuild:
