--- a/gnome-extra/yelp/ChangeLog
+++ b/gnome-extra/yelp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/yelp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.218 2009/10/16 22:29:46 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.219 2009/10/24 16:46:23 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> yelp-2.26.0.ebuild:
+  ppc stable #281427
 
   16 Oct 2009; Markus Meier <maekke@gentoo.org> yelp-2.26.0.ebuild:
   x86 stable, bug #281427
