--- a/sci-electronics/pcb/ChangeLog
+++ b/sci-electronics/pcb/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-electronics/pcb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/pcb/ChangeLog,v 1.49 2009/10/24 12:15:46 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/pcb/ChangeLog,v 1.50 2009/10/24 19:47:00 calchan Exp $
+
+  24 Oct 2009; Denis Dupeyron <calchan@gentoo.org> -pcb-20080202.ebuild,
+  -pcb-20081128.ebuild:
+  Cleanup after stabilization.
 
   24 Oct 2009; nixnut <nixnut@gentoo.org> pcb-20081128-r1.ebuild:
   ppc stable #285469
