--- a/xfce-base/xfdesktop/ChangeLog
+++ b/xfce-base/xfdesktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfdesktop
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.154 2009/10/20 23:57:58 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.155 2009/10/24 19:54:34 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> xfdesktop-4.6.1-r1.ebuild:
+  ppc stable #289179
 
   20 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   xfdesktop-4.6.1-r1.ebuild:
