--- a/xfce-extra/xfce4-clipman-plugin/ChangeLog
+++ b/xfce-extra/xfce4-clipman-plugin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-clipman-plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.14 2009/10/24 17:29:41 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.15 2009/10/24 19:54:56 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org> xfce4-clipman-plugin-1.1.1.ebuild:
+  ppc stable #289179
 
   24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   xfce4-clipman-plugin-1.1.1.ebuild,
