--- a/gnome-extra/nautilus-open-terminal/ChangeLog
+++ b/gnome-extra/nautilus-open-terminal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/nautilus-open-terminal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/nautilus-open-terminal/ChangeLog,v 1.39 2009/10/17 00:29:09 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/nautilus-open-terminal/ChangeLog,v 1.40 2009/10/24 20:04:23 nixnut Exp $
+
+  24 Oct 2009; nixnut <nixnut@gentoo.org>
+  nautilus-open-terminal-0.17.ebuild:
+  ppc stable #289821
 
   17 Oct 2009; Markus Meier <maekke@gentoo.org>
   nautilus-open-terminal-0.16.ebuild:
