--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.3449 2009/10/24 21:59:46 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.3450 2009/10/24 22:23:35 ssuominen Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> package.mask:
+  Mask noatun and plugins wrt #270575.
 
   24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> package.mask:
   Mask KDE3 pkgs with QA issues.
