--- a/games-engines/gemrb/ChangeLog
+++ b/games-engines/gemrb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-engines/gemrb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-engines/cvs-repo/gentoo-x86/games-engines/gemrb/ChangeLog,v 1.1 2009/08/27 16:36:05 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-engines/cvs-repo/gentoo-x86/games-engines/gemrb/ChangeLog,v 1.2 2009/10/25 15:20:02 maekke Exp $
+
+  25 Oct 2009; Markus Meier <maekke@gentoo.org> gemrb-0.5.1.ebuild:
+  amd64/x86 stable, bug #288825
 
 *gemrb-0.5.1 (27 Aug 2009)
 
