--- a/dev-python/gmpy/ChangeLog
+++ b/dev-python/gmpy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/gmpy
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gmpy/ChangeLog,v 1.8 2009/02/24 21:05:29 grozin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gmpy/ChangeLog,v 1.9 2009/10/25 15:40:13 arfrever Exp $
+
+*gmpy-1.10 (25 Oct 2009)
+
+  25 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -gmpy-1.01.ebuild, -gmpy-1.03.ebuild, +gmpy-1.10.ebuild:
+  Version bump. Set SUPPORT_PYTHON_ABIS.
 
 *gmpy-1.04 (24 Feb 2009)
 
